--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,13 +3,14 @@
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.2",
     "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.0.3",
+    "com.unity.package-manager-ui": "2.1.1",
+    "com.unity.playablegraph-visualizer": "0.2.0-preview.2",
+    "com.unity.postprocessing": "2.1.3",
     "com.unity.purchasing": "2.0.3",
-    "com.unity.render-pipelines.core": "4.1.0-preview",
-    "com.unity.render-pipelines.high-definition": "4.1.0-preview",
-    "com.unity.render-pipelines.lightweight": "4.1.0-preview",
-    "com.unity.shadergraph": "4.1.0-preview",
+    "com.unity.render-pipelines.core": "5.2.3",
     "com.unity.textmeshpro": "1.3.0",
+    "com.unity.timeline": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
